fixed content jumping

--- a/resources/scss/components/_component.post.scss
+++ b/resources/scss/components/_component.post.scss
@@ -7,7 +7,7 @@
     justify-content: center;
 
     &__images {
-        max-width: 60%;
+        width: 60%;
         margin: 0 0 0 2rem;
     }
 
